hover display inproducts

--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -22,6 +22,10 @@
 			<article class="product">
 				<a class="product-image" href="{{ product.url }}">
 					<img src="{{ product.photo }}">
+					<div class="cover">
+						<button class="button-solid" data-size="small" data-color='red'>Like</button>
+						<button class="button-solid" data-size="small" data-color='red'>Coleccionar</button>
+					</div>
 				</a>
 				<div class="product-title">
 					<div class="title">{{product.name}}</div>
