--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1029,6 +1029,39 @@ body {
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
+.product .product-image {
+  position: relative;
+  display: block;
+}
+.product .product-image .cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0,0,0,0.25);
+  display: none;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.product .product-image .cover .button-solid {
+  margin: 0.5rem;
+}
 .product .product-title {
   border-bottom: 1px dashed #e6e8ec;
   padding: 0.5em;
@@ -1060,6 +1093,14 @@ body {
   font-weight: 500;
   letter-spacing: 0.5px;
   font-family: 'Raleway';
+}
+.product-image:hover .cover {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
 }
 @media screen and (min-width: 360px) {
   .products {
