--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -23,8 +23,8 @@
 				<a class="product-image" href="{{ product.url }}">
 					<img src="{{ product.photo }}">
 					<div class="cover">
-						<button class="button-solid" data-size="small" data-color='red'>Like</button>
-						<button class="button-solid" data-size="small" data-color='red'>Coleccionar</button>
+						<button class="button-solid" data-color='red'>Like</button>
+						<button class="button-solid" data-color='red'>Coleccionar</button>
 					</div>
 				</a>
 				<div class="product-title">
