--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -12,8 +12,8 @@
 	border 1px solid #ddd
 	position relative
 	transition box-shadow ease-in-out 125ms
-	&:hover
-		box-shadow rgba(0,0,0,0.35) 0 0 10px
+	// &:hover
+	// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
 	.product-image
 		position relative
 		display block
@@ -22,7 +22,8 @@
 			top 0
 			bottom 0
 			width 100%
-			background rgba(black, .25)
+			// background rgba(white, .25)
+			background rgba(black, .1)
 			display none
 			flex-direction column
 			justify-content center
