--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -24,17 +24,18 @@ work-width = 150px
 			bottom 0
 			width 100%
 			display none
+			background rgba(black, 0.1)
 			.social-item
 				margin auto
-				background rgba(black, .375)
+				// background rgba(black, .375)
 				color white
 				border-radius 50%
 				padding 1em
-				font-size 1em
+				font-size 2em
 				cursor pointer
 				display flex
 				&.active
-					background white
+					// background white
 					color #f54545
 .work
 	&:hover
