--- a/public/stylus/objects/users.styl
+++ b/public/stylus/objects/users.styl
@@ -41,8 +41,8 @@
 		padding 1em .5rem
 		display flex
 		justify-content center
-	&:hover
-		box-shadow rgba(0,0,0,0.35) 0 0 10px
+	// &:hover
+	// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
 	&__featured
 		position absolute
 		top 0
