--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -32,13 +32,13 @@
 	<div class="profile__menu">
 		<div class="square-menu-container">
 			<div class="square-menu">
-				<div class="square-menu__item">Portafolio</div>
-				<div class="square-menu__item">Tienda</div>
-				<div class="square-menu__item">Obras favoritas</div>
-				<div class="square-menu__item">Productos favoritos</div>
-				<div class="square-menu__item">Colecciones</div>
-				<div class="square-menu__item">Seguidores</div>
-				<div class="square-menu__item">Siguiendo</div>
+				<div class="square-menu__item">Portafolio {{data[0]}}</div>
+				<div class="square-menu__item">Tienda {{data[1]}}</div>
+				<div class="square-menu__item">Obras favoritas {{data[2]}}</div>
+				<div class="square-menu__item">Productos favoritos {{data[3]}}</div>
+				<div class="square-menu__item">Colecciones {{data[4]}}</div>
+				<div class="square-menu__item">Seguidores {{data[5]}}</div>
+				<div class="square-menu__item">Siguiendo {{data[6]}}</div>
 			</div>
 		</div>
 	</div>
