--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1012,6 +1012,7 @@ body {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  position: relative;
 }
 .products .product-wrapper {
   padding: 0.5rem;
@@ -1199,6 +1200,8 @@ body {
   box-shadow: 0 0 1px #d7dae0;
   padding: 0.5rem;
   text-align: center;
+  position: absolute;
+  z-index: 1;
 }
 .collect .collect-title {
   margin: 0.5rem;
