--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -618,6 +618,7 @@ body {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  position: relative;
 }
 .products .product-wrapper {
   padding: 0.5rem;
@@ -805,6 +806,8 @@ body {
   box-shadow: 0 0 1px #d7dae0;
   padding: 0.5rem;
   text-align: center;
+  position: absolute;
+  z-index: 1;
 }
 .collect .collect-title {
   margin: 0.5rem;
