--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -5,6 +5,7 @@
 	margin .5rem
 	display flex
 	flex-wrap wrap
+	position relative
 	.product-wrapper
 		padding .5rem
 
@@ -109,6 +110,9 @@ product-width = 180px
 	box-shadow 0 0 1px #d7dae0
 	padding .5rem
 	text-align center
+	position absolute
+	// transform translate(-100%, -50%)
+	z-index 1
 	.collect-title
 		// white-space nowrap
 		margin 0.5rem
