--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -916,6 +916,7 @@ body {
   text-align: center;
   position: absolute;
   z-index: 1;
+  display: none;
 }
 .collect .collect-title {
   margin: 0.5rem;
