--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -111,8 +111,8 @@ product-width = 180px
 	padding .5rem
 	text-align center
 	position absolute
-	// transform translate(-100%, -50%)
 	z-index 1
+	display none
 	.collect-title
 		// white-space nowrap
 		margin 0.5rem
