--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -804,7 +804,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 0 0 1px #d7dae0;
   box-shadow: 0 0 1px #d7dae0;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   text-align: center;
   position: absolute;
   z-index: 1;
