--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -108,7 +108,7 @@ product-width = 180px
 	border 2px solid #c6c9d0
 	background #fff
 	box-shadow 0 0 1px #d7dae0
-	padding .5rem
+	padding .5rem 1rem
 	text-align center
 	position absolute
 	z-index 1
