preloader in colelctions

--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -27,7 +27,9 @@
 	<div class="collect">
 		<div class="collect-title">Add to collections</div>
 		<ul class="checkbox-list"></ul>
-		<button class="button-solid" data-size="small" data-color='red'>Guardar</button>
+		<button class="button-solid" data-size="small" data-color='red'>
+			<i class="fa fa-spinner"></i> Guardar
+		</button>
 	</div>
 
 
