--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -134,7 +134,7 @@
 				<div class="collection__products"><%= numOfProducts %> Productos</div>
 				<div class="collection__name"><%= name %></div>
 				<a class="collection__user" href="#">De <span><%= User.username %></span></a>
-				<div class="collection__description"><%= description %>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ...</div>
+				<div class="collection__description"><%= description %></div>
 			</div>
 		</div>	
 	</script>
