--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -25,6 +25,7 @@ work-width = 150px
 			width 100%
 			display none
 			background rgba(black, 0.1)
+			// background rgba(black, 0.25)
 			.social-item
 				margin auto
 				// background rgba(black, .375)
