--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -23,14 +23,18 @@
 			top 0
 			bottom 0
 			width 100%
-			// background rgba(white, .25)
 			background rgba(black, .1)
+			// background rgba(black, .25)
 			display none
 			flex-direction column
 			justify-content center
 			align-items center
-			.button-solid
+			.fa
+				font-size 2rem
+				color white
 				margin .5rem
+			// .button-solid
+			// 	margin .5rem
 	.product-title
 		border-bottom 1px dashed #e6e8ec
 		padding .5em
@@ -108,7 +112,7 @@ product-width = 180px
 	border 2px solid #c6c9d0
 	background #fff
 	box-shadow 0 0 1px #d7dae0
-	padding .5rem 1rem
+	padding .5rem .75rem
 	text-align center
 	position absolute
 	z-index 1
@@ -119,6 +123,7 @@ product-width = 180px
 		font-family 'Oswald'
 		color #222
 		letter-spacing .5px
+		font-size 1.125rem
 	.checkbox-list
 		margin .5rem
 	.button-solid
@@ -128,6 +133,11 @@ product-width = 180px
 			display none
 			// margin-right .5rem
 			animation 1.5s load infinite
+	input
+		font-size .9rem
+		width auto
+		display block
+		margin .5rem
 
 .collect.load
 	.button-solid
@@ -150,7 +160,7 @@ product-width = 180px
 		padding .25rem
 		font-family 'Raleway'
 		cursor pointer
-		font-size .8rem
+		font-size .85rem
 		letter-spacing 1px
 		&:hover
 			background #eee
