finish colelction inplementation

--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -13,7 +13,11 @@
 	<div class="collect">
 		<div class="collect-title">Add to collections</div>
 		<ul class="checkbox-list"></ul>
-		<input class="input" name="newCollection" placeholder="Agregar nueva" type="text">
+		<p class="new-text"><i class="fa fa-plus"></i> Agregar nueva</p>
+		<div class="add-wrapp">
+			<i class="fa fa-check-square-o"></i>
+			<input class="input" name="newCollection" placeholder="Agregar nueva" type="text">
+		</div>
 		<button class="button-solid" data-size="small" data-color='red'>
 			<i class="fa fa-spinner"></i> Guardar
 		</button>
@@ -28,8 +32,6 @@
 					<div class="cover">
 						<i class="fa fa-heart"></i>
 						<i class="fa fa-th-list"></i>
-						<!-- <button class="button-solid" data-color='red'><i class="fa fa-heart"></i> Like</button> -->
-						<!-- <button class="button-solid" data-color='red'><i class="fa fa-th-list"></i> Coleccionar</button> -->
 					</div>
 				</a>
 				<div class="product-title">
