--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -126,18 +126,32 @@ product-width = 180px
 		font-size 1.125rem
 	.checkbox-list
 		margin .5rem
+	.new-text
+		color #3000ff
+		font-family 'Roboto Condensed'
+		cursor pointer
+		padding .25rem
+		font-size .9rem
+		.fa
+			font-size .6rem
+	.add-wrapp
+		display none
+		align-items center
+		margin .5rem
+		&.visible
+			display flex
+		.fa-check-square-o
+			color rgba(green ,5)
+			padding-right .25rem
+			cursor pointer
+		input
+			font-size .9rem
+			padding .25rem
 	.button-solid
 		margin .5rem
-		// display flex
 		.fa
 			display none
-			// margin-right .5rem
 			animation 1.5s load infinite
-	input
-		font-size .9rem
-		width auto
-		display block
-		margin .5rem
 
 .collect.load
 	.button-solid
@@ -157,7 +171,7 @@ product-width = 180px
 	&__item
 		display flex
 		align-items center
-		padding .25rem
+		padding .25rem 0
 		font-family 'Raleway'
 		cursor pointer
 		font-size .85rem
