--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -25,10 +25,8 @@ work-width = 150px
 			width 100%
 			display none
 			background rgba(black, 0.1)
-			// background rgba(black, 0.25)
 			.social-item
 				margin auto
-				// background rgba(black, .375)
 				color white
 				border-radius 50%
 				padding 1em
@@ -36,8 +34,7 @@ work-width = 150px
 				cursor pointer
 				display flex
 				&.active
-					// background white
-					color #f54545
+					color #3000ff
 .work
 	&:hover
 		.cover
