width colletions profile

--- a/public/stylus/objects/collections.styl
+++ b/public/stylus/objects/collections.styl
@@ -47,7 +47,7 @@
 		letter-spacing .25px
 		
 		
-collection-width = 200px
+collection-width = 250px
 
 @media screen and (min-width: collection-width*2)
 	.collections
@@ -69,8 +69,8 @@ collection-width = 200px
 			flex 1 25%
 			max-width 25%
 
-@media screen and (min-width: collection-width*5)
-	.collections
-		.collection-wrapper
-			flex 1 20%
-			max-width 20%
+// @media screen and (min-width: collection-width*5)
+// 	.collections
+// 		.collection-wrapper
+// 			flex 1 20%
+// 			max-width 20%
