--- a/public/stylus/objects/collections.styl
+++ b/public/stylus/objects/collections.styl
@@ -7,11 +7,13 @@
 	flex-wrap wrap
 	.collection-wrapper
 		padding .5rem
+		flex 1 100%
+		max-width 100%
 
 .collection
 	border 1px solid #ddd
 	transition box-shadow ease-in-out 125ms
-	padding .5rem
+	padding 1rem
 	&__images
 		display flex
 		.imageColumn
