--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -110,7 +110,7 @@
 	<script type="text/template" id="collection-template">
 		<div class="collection-wrapper">
 			<div class="collection">
-				<div class="collection__images">
+				<a class="collection__images" href="<%= url %>">
 					<div class="imageColumn">
 						<% if (products[0] && products[0].photo) { %>
 							<div class="image-container" style="height: 100%; background-image: url('<%= products[0].photo %>')"></div>
@@ -130,7 +130,7 @@
 	            <div class="image-container" style="height: 50%; background: #ccc; border: 1px solid white;"></div>
 						<% } %>
 					</div>
-				</div>
+				</a>
 				<div class="collection__products"><%= numOfProducts %> Productos</div>
 				<div class="collection__name"><%= name %></div>
 				<a class="collection__user" href="#">De <span><%= User.username %></span></a>
