new like and colelction hover in products

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -53,7 +53,8 @@
 
 	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/vendor/underscore-min.js"></script>
-
+	<script type="text/javascript" src="/js/vendor/hammer.min.js"></script>
+	
 	<script type="text/javascript" src="/js/lib/search.js"></script>
 	<script type="text/javascript" src="/js/lib/section.js"></script>
 	<script type="text/javascript" src="/js/lib/product.js"></script>
