--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -33,8 +33,10 @@
 				font-size 2rem
 				color white
 				margin .5rem
-			// .button-solid
-			// 	margin .5rem
+				cursor pointer
+			.fa:first-child
+				&.active
+					color #3000ff
 	.product-title
 		border-bottom 1px dashed #e6e8ec
 		padding .5em
@@ -53,12 +55,13 @@
 			font-weight 500
 			letter-spacing .5px
 			font-family 'Raleway'
+		.like
+		.wish-list
+			display none
 
 .product-image:hover
 	.cover
 		display flex
-			
-			
 		
 
 // product-width = 200px
