--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -19,13 +19,13 @@
 	{% for product in products %}
 		<div class="product-wrapper">
 			<article class="product">
-				<a class="product-image">
+				<div class="product-image">
 					<img src="{{ product.photo }}">
 					<div class="cover">
 						<i class="fa fa-heart {% if product.liked %}active{% endif %}"></i>
 						<i class="fa fa-th-list"></i>
 					</div>
-				</a>
+				</div>
 				<div class="product-title">
 					<div class="title">{{product.name}}</div>
 				</div>
