--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -59,7 +59,7 @@
 			<div class="empty">No tine obras favoritas</div>
 		</div>
 		<div class="profile__element">
-			<section class="products"></section>
+			{% include '../partials/products.html' %}
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tiene productos favoritos</div>
 		</div>
