--- a/public/css/add-work.css
+++ b/public/css/add-work.css
@@ -667,6 +667,15 @@ body {
   max-width: 1100px;
   margin: auto;
 }
+.add-work__title {
+  font-family: 'Oswald';
+  font-size: 1.75rem;
+  color: #585859;
+  letter-spacing: 0.5px;
+  line-height: 1em;
+  text-align: center;
+  margin: 1.5rem;
+}
 .add-work__data {
   margin: 0.5rem;
 }
@@ -681,36 +690,6 @@ body {
 }
 .add-work__data .checkbox-list {
   margin: 0.25rem 0;
-}
-.upload-images {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.upload-images .upload-image {
-  height: 300px;
-  width: 300px;
-  margin: 1rem;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-}
-.upload-images .upload-image img {
-  width: auto;
-  max-width: 100%;
-  max-height: 100%;
 }
 .work-data__input {
   padding: 0.5rem;
@@ -739,6 +718,115 @@ body {
     -ms-flex: 1 50%;
     flex: 1 50%;
   }
+}
+.upload-images {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.upload-images .upload-image {
+  margin: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  position: relative;
+}
+.upload-images .upload-image input {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  font-size: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+.upload-images .upload-image .inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 1rem;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  text-align: center;
+  font-family: "Roboto Condensed";
+  font-size: 1.25rem;
+  color: #585858;
+}
+.upload-images .upload-image .inner .fa {
+  font-size: 2rem;
+}
+.upload-images .upload-image.defout {
+  background: #f6f6f6;
+  height: 200px;
+  width: 150px;
+}
+.upload-images .upload-image.preview .inner {
+  display: none;
+  background: rgba(255,255,255,0.5);
+  color: #444;
+}
+.upload-images .upload-image.preview:hover .inner {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.checkbox-list {
+  max-height: 200px;
+  overflow: auto;
 }
 .checkbox-list__item {
   display: -webkit-box;
