submit button margins

--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -46,24 +46,6 @@
 		</p>
 		<div class="add-work__images">
 			<div class="upload-images">
-				<!-- <div class="upload-image">
-					<img src="/img/works/obra2.jpg">
-				</div>
-				<div class="upload-image">
-					<img src="/img/works/obra10.jpg">
-				</div>
-				<div class="upload-image">
-					<img src="/img/works/obra12.jpg">
-				</div>
-				<div class="upload-image">
-					<img src="/img/works/obra10.jpg">
-				</div>
-				<div class="upload-image">
-					<img src="/img/works/obra12.jpg">
-				</div>
-				<div class="upload-image">
-					<img src="/img/works/obra10.jpg">
-				</div> -->
 				
 				<div class="upload-image defout">
 					<input type="file" name="file"/>
@@ -122,8 +104,7 @@
 				</div>
 			</form>
 		</div>
-		
-		<button class="button-solid" data-color='red'>Ver más</button>
+		<button class="button-solid" data-color='red'>Finalizar</button>
 	</section>
 
 {% endblock %}
@@ -380,3 +361,22 @@
 	</script>
 
 {% endblock %}
+
+				<!-- <div class="upload-image">
+					<img src="/img/works/obra2.jpg">
+				</div>
+				<div class="upload-image">
+					<img src="/img/works/obra10.jpg">
+				</div>
+				<div class="upload-image">
+					<img src="/img/works/obra12.jpg">
+				</div>
+				<div class="upload-image">
+					<img src="/img/works/obra10.jpg">
+				</div>
+				<div class="upload-image">
+					<img src="/img/works/obra12.jpg">
+				</div>
+				<div class="upload-image">
+					<img src="/img/works/obra10.jpg">
+				</div> -->
