--- a/public/stylus/add-work.styl
+++ b/public/stylus/add-work.styl
@@ -41,6 +41,10 @@
 		&__input
 			flex 1 50%
 			
+.button-solid
+	margin 2rem auto
+	display table
+
 .upload-images
 	display flex
 	flex-wrap wrap
